@@ -325,7 +325,7 @@ void TtHFit::WriteHistos(/*string fileName*/){
         for(int i_smp=0;i_smp<fNSamples;i_smp++){
             sh = fRegions[i_ch]->GetSampleHist(fSamples[i_smp]->fName);
             if(sh == 0x0){
-	      if(TtHFitter::DEBUGLEVEL>0) std::cout << "SampleHist[" << i_smp << "] for sample " << fSamples[i_smp]->fName << " not there." << std::endl;
+              if(TtHFitter::DEBUGLEVEL>0) std::cout << "SampleHist[" << i_smp << "] for sample " << fSamples[i_smp]->fName << " not there." << std::endl;
                 continue;
             }
             // set file and histo names for nominal
@@ -373,16 +373,16 @@ void TtHFit::DrawSystPlotsSumSamples(){
     std::set<std::string> systNames;
     for(int i_regSmp=0; i_regSmp<fRegions[i_ch]->fNSamples; i_regSmp++){
       for(int i_smSyst=0; i_smSyst<fRegions[i_ch]->fSampleHists[i_regSmp]->fNSyst; i_smSyst++){
-	systNames.insert(fRegions[i_ch]->fSampleHists[i_regSmp]->fSyst[i_smSyst]->fName);
+        systNames.insert(fRegions[i_ch]->fSampleHists[i_regSmp]->fSyst[i_smSyst]->fName);
       }
     }
     for(int i_smp=0;i_smp<fRegions[i_ch]->fNSamples;i_smp++){
       if(fSamples[i_smp]->fType==Sample::DATA) h_dataCopy=(TH1*)fRegions[i_ch]->fSampleHists[i_smp]->fHist->Clone();
       else if(fSamples[i_smp]->fType==Sample::GHOST) continue;
       else if(empty){
-	hist->CloneSampleHist(fRegions[i_ch]->fSampleHists[i_smp],systNames);
-	hist->fName = fRegions[i_ch]->fName + "_Combined";
-	empty=false;
+        hist->CloneSampleHist(fRegions[i_ch]->fSampleHists[i_smp],systNames);
+        hist->fName = fRegions[i_ch]->fName + "_Combined";
+        empty=false;
       }
       else hist->SampleHistAdd(fRegions[i_ch]->fSampleHists[i_smp]);
     }
@@ -765,17 +765,22 @@ void TtHFit::ReadConfigFile(string fileName,string options){
         }
         else if(fInputType==1){
             vector<string> variable = Vectorize(cs->Get("Variable"),',');
-	    vector<string> corrVar  = Vectorize(variable[0],'|');
-	    if(corrVar.size()==2){
-	      if(TtHFitter::DEBUGLEVEL>0) std::cout << "Have a correlation variable in reg " << regNames.back() << " : " 
-						    << corrVar[0] << " and " << corrVar[1] << std::endl;
-	      reg->SetVariable(  "corr_"+corrVar[0]+"_"+corrVar[1], atoi(variable[1].c_str()), atof(variable[2].c_str()), atof(variable[3].c_str()), corrVar[0].c_str(), corrVar[1].c_str() );
-	    }
-	    else{ 
-	      if(TtHFitter::DEBUGLEVEL>0) std::cout << "Have a usual variable in reg " << regNames.back() << " : " 
-						    << variable[0] << " and size of corrVar=" << corrVar.size() << std::endl;
-	      reg->SetVariable(  variable[0], atoi(variable[1].c_str()), atof(variable[2].c_str()), atof(variable[3].c_str()) );
-	    }
+            // fix variable vector if special functions are used
+            if(variable[0].find("Alt$")!=string::npos || variable[0].find("MaxIf$")!=string::npos ||variable[0].find("MinIf$")!=string::npos ){
+                variable[0]+=","+variable[1];
+                variable.erase(variable.begin()+1);
+            }
+            vector<string> corrVar  = Vectorize(variable[0],'|');
+            if(corrVar.size()==2){
+              if(TtHFitter::DEBUGLEVEL>0) std::cout << "Have a correlation variable in reg " << regNames.back() << " : " 
+                                                    << corrVar[0] << " and " << corrVar[1] << std::endl;
+              reg->SetVariable(  "corr_"+corrVar[0]+"_"+corrVar[1], atoi(variable[1].c_str()), atof(variable[2].c_str()), atof(variable[3].c_str()), corrVar[0].c_str(), corrVar[1].c_str() );
+            }
+            else{ 
+              if(TtHFitter::DEBUGLEVEL>0) std::cout << "Have a usual variable in reg " << regNames.back() << " : " 
+                                                    << variable[0] << " and size of corrVar=" << corrVar.size() << std::endl;
+              reg->SetVariable(  variable[0], atoi(variable[1].c_str()), atof(variable[2].c_str()), atof(variable[3].c_str()) );
+            }
             //
             if(cs->Get("Selection")!="") reg->AddSelection( cs->Get("Selection") );
             param = cs->Get("NtupleName"); if(param!="") { reg->fNtupleNames.clear(); reg->fNtupleNames.push_back(param); }
@@ -1232,7 +1237,7 @@ void TtHFit::ReadConfigFile(string fileName,string options){
 //         for(int i_smp=0;i_smp<fNSamples;i_smp++){
 //             sam = fSamples[i_smp];
 //             if(sam->fType == Sample::DATA) continue;
-// 	    if(!sam->fUseSystematics) continue;
+//             if(!sam->fUseSystematics) continue;
 //             if(   (samples[0]=="all" || find(samples.begin(), samples.end(), sam->fName)!=samples.end() )
 //                && (exclude[0]==""    || find(exclude.begin(), exclude.end(), sam->fName)==exclude.end() )
 //             ){
@@ -1384,7 +1389,7 @@ void TtHFit::ReadConfigFile(string fileName,string options){
             mySys1->fName=(mySys1->fName)+"_Acc";
             fSystematics.push_back( mySys1 );
             mySys1->fIsNormOnly=true;
-	    //////////////////////////mySys1->fIsShape=false;
+            //////////////////////////mySys1->fIsShape=false;
             if(cs->Get("NuisanceParameter")!=""){
                 mySys1->fNuisanceParameter = (sys->fNuisanceParameter)+"_Acc";
                 TtHFitter::NPMAP[mySys1->fName] = sys->fNuisanceParameter;
@@ -1480,14 +1485,14 @@ void TtHFit::ReadNtuples(){
         std::cout << "  Region " << fRegions[i_ch]->fName << " ..." << std::endl;
 
         if(fRegions[i_ch]->fBinTransfo != "") ComputeBining(i_ch);
-	if(fRegions[i_ch]->fCorrVar1 != ""){
-	  if(fRegions[i_ch]->fCorrVar2 == "") {std::cout << "TtHFitter::WARNING : Only first correlation variable defined, do not read region : " 
-							 << fRegions[i_ch]->fName << std::endl; continue; }
-	  cout<<"calling the function"<<endl;
-	  defineVariable(i_ch);
-	}
-	else if(fRegions[i_ch]->fCorrVar2 != "") {std::cout << "TtHFitter::WARNING : Only second correlation variable defined, do not read region : " 
-							    << fRegions[i_ch]->fName << std::endl; continue; }
+        if(fRegions[i_ch]->fCorrVar1 != ""){
+          if(fRegions[i_ch]->fCorrVar2 == "") {std::cout << "TtHFitter::WARNING : Only first correlation variable defined, do not read region : " 
+                                                         << fRegions[i_ch]->fName << std::endl; continue; }
+          cout<<"calling the function"<<endl;
+          defineVariable(i_ch);
+        }
+        else if(fRegions[i_ch]->fCorrVar2 != "") {std::cout << "TtHFitter::WARNING : Only second correlation variable defined, do not read region : " 
+                                                            << fRegions[i_ch]->fName << std::endl; continue; }
 
         for(int i_smp=0;i_smp<fNSamples;i_smp++){
             if(TtHFitter::DEBUGLEVEL>0) std::cout << "  Reading " << fSamples[i_smp]->fName << std::endl;
@@ -4000,7 +4005,7 @@ void TtHFit::DrawPruningPlot(){
                             }
                             //
                             // now check for crazy sys ....
-                            if ( fThresholdSystLarge > -1 ) {	
+                            if ( fThresholdSystLarge > -1 ) {        
                                 // first norm:
                                 if ( normUp>fThresholdSystLarge || normDo>fThresholdSystLarge ) {
                                     syh->fBadNorm = true;
@@ -4389,7 +4394,7 @@ RooDataSet* TtHFit::DumpData( RooWorkspace *ws,  std::map < std::string, int > &
             // Get pdf associated with state from simpdf
             RooAbsPdf* pdftmp = simPdf->getPdf(channelCat->getLabel()) ;
             
-	    // Generate observables defined by the pdf associated with this state
+            // Generate observables defined by the pdf associated with this state
             RooArgSet* obstmp = pdftmp->getObservables(*mc->GetObservables()) ;
             
             RooDataSet* obsDataUnbinned = new RooDataSet(Form("combAsimovData%d",iFrame),Form("combAsimovData%d",iFrame),RooArgSet(obsAndWeight,*channelCat),RooFit::WeightVar(*weightVar));
@@ -5462,63 +5467,63 @@ void TtHFit::ComputeBining(int regIter){
       if( FindInStringVector(fSamples[i_smp]->fRegions,fRegions[regIter]->fName)<0 ) continue;
       fullSelection = "1";
       if(!fSamples[i_smp]->fIgnoreSelection && fSelection!="" && fSelection!="1")
-	fullSelection += " && "+fSelection;
+        fullSelection += " && "+fSelection;
       if(!fSamples[i_smp]->fIgnoreSelection && fRegions[regIter]->fSelection!="" && fRegions[regIter]->fSelection!="1")
-	fullSelection += " && "+fRegions[regIter]->fSelection;
+        fullSelection += " && "+fRegions[regIter]->fSelection;
       if(fSamples[i_smp]->fSelection!="" && fSamples[i_smp]->fSelection!="1")
-	fullSelection += " && "+fSamples[i_smp]->fSelection;
+        fullSelection += " && "+fSamples[i_smp]->fSelection;
       if(!fSamples[i_smp]->fNormalizedByTheory){
-	fullMCweight = fSamples[i_smp]->fMCweight;
+        fullMCweight = fSamples[i_smp]->fMCweight;
       }
       else{
-	fullMCweight = fMCweight + " * " + fSamples[i_smp]->fMCweight;
-	if(fRegions[regIter]->fMCweight!="") fullMCweight += " * " + fRegions[regIter]->fMCweight;
+        fullMCweight = fMCweight + " * " + fSamples[i_smp]->fMCweight;
+        if(fRegions[regIter]->fMCweight!="") fullMCweight += " * " + fRegions[regIter]->fMCweight;
       }
       //
       // build a list of ntuples to read
       fullPaths.clear();
       vector<string> NtupleNames;
       for(unsigned int ns_ch=0; ns_ch<fRegions[regIter]->fNtupleNames.size(); ++ns_ch){
-	NtupleNames.push_back(fRegions[regIter]->fNtupleNames.at(ns_ch));
+        NtupleNames.push_back(fRegions[regIter]->fNtupleNames.at(ns_ch));
       }
       for(unsigned int ns_smp=0; ns_smp<fSamples[i_smp]->fNtupleNames.size(); ++ns_smp){
-	NtupleNames.push_back(fSamples[i_smp]->fNtupleNames.at(ns_smp));
+        NtupleNames.push_back(fSamples[i_smp]->fNtupleNames.at(ns_smp));
       }
       vector<string> NtupleNameSuffs = CombinePathSufs( fSamples[i_smp]->fNtupleNameSuffs,
-							fRegions[regIter]->fNtupleNameSuffs );
+                                                        fRegions[regIter]->fNtupleNameSuffs );
       fullPaths = CreatePathsList( fSamples[i_smp]->fNtuplePaths.size()>0 ? fSamples[i_smp]->fNtuplePaths : fNtuplePaths,
-				   fRegions[regIter]->fNtuplePathSuffs,
-				   fSamples[i_smp]->fNtupleFiles.size()>0 ? fSamples[i_smp]->fNtupleFiles : ToVec(fNtupleFile), empty,
-				   NtupleNames.size()>0 ? NtupleNames : ToVec( fNtupleName ),
-				   NtupleNameSuffs.size()>0 ? NtupleNameSuffs : empty  // NEW
-				   );
+                                   fRegions[regIter]->fNtuplePathSuffs,
+                                   fSamples[i_smp]->fNtupleFiles.size()>0 ? fSamples[i_smp]->fNtupleFiles : ToVec(fNtupleFile), empty,
+                                   NtupleNames.size()>0 ? NtupleNames : ToVec( fNtupleName ),
+                                   NtupleNameSuffs.size()>0 ? NtupleNameSuffs : empty  // NEW
+                                   );
       for(int i_path=0;i_path<(int)fullPaths.size();i_path++){
-	htmp = HistFromNtuple( fullPaths[i_path],
-			       fRegions[regIter]->fVariable, 10000, fRegions[regIter]->fXmin, fRegions[regIter]->fXmax,
-			       fullSelection, fullMCweight);
-	
-	//Pre-processing of histograms (rebinning, lumi scaling)
-	if(fSamples[i_smp]->fType!=Sample::DATA && fSamples[i_smp]->fNormalizedByTheory) htmp -> Scale(fLumi);
-	
-	if(fSamples[i_smp]->fLumiScales.size()>i_path) htmp -> Scale(fSamples[i_smp]->fLumiScales[i_path]);
-	else if(fSamples[i_smp]->fLumiScales.size()==1) htmp -> Scale(fSamples[i_smp]->fLumiScales[0]);
-	
-	//Importing the histogram in TtHFitter
-	if(fSamples[i_smp]->fType==Sample::SIGNAL){
-	  if(nDefSig){
-	    hsig = (TH1F*)htmp->Clone(Form("h_%s_%s",fRegions[regIter]->fName.c_str(),fSamples[i_smp]->fName.c_str()));
-	    nDefSig=false;
-	  }
-	  else hsig->Add(htmp);
-	}
-	else{
-	  if(nDefBkg){
-	    hbkg = (TH1F*)htmp->Clone(Form("h_%s_%s",fRegions[regIter]->fName.c_str(),fSamples[i_smp]->fName.c_str()));
-	    nDefBkg=false;
-	  }
-	  else hbkg->Add(htmp);
-	}
-	htmp->~TH1F();
+        htmp = HistFromNtuple( fullPaths[i_path],
+                               fRegions[regIter]->fVariable, 10000, fRegions[regIter]->fXmin, fRegions[regIter]->fXmax,
+                               fullSelection, fullMCweight);
+        
+        //Pre-processing of histograms (rebinning, lumi scaling)
+        if(fSamples[i_smp]->fType!=Sample::DATA && fSamples[i_smp]->fNormalizedByTheory) htmp -> Scale(fLumi);
+        
+        if(fSamples[i_smp]->fLumiScales.size()>i_path) htmp -> Scale(fSamples[i_smp]->fLumiScales[i_path]);
+        else if(fSamples[i_smp]->fLumiScales.size()==1) htmp -> Scale(fSamples[i_smp]->fLumiScales[0]);
+        
+        //Importing the histogram in TtHFitter
+        if(fSamples[i_smp]->fType==Sample::SIGNAL){
+          if(nDefSig){
+            hsig = (TH1F*)htmp->Clone(Form("h_%s_%s",fRegions[regIter]->fName.c_str(),fSamples[i_smp]->fName.c_str()));
+            nDefSig=false;
+          }
+          else hsig->Add(htmp);
+        }
+        else{
+          if(nDefBkg){
+            hbkg = (TH1F*)htmp->Clone(Form("h_%s_%s",fRegions[regIter]->fName.c_str(),fSamples[i_smp]->fName.c_str()));
+            nDefBkg=false;
+          }
+          else hbkg->Add(htmp);
+        }
+        htmp->~TH1F();
       }
     }
     
@@ -5540,50 +5545,50 @@ void TtHFit::ComputeBining(int regIter){
       else                                          histoNames = ToVec( fHistoName );
       
 //       fullPaths = CreatePathsList( fHistoPaths, fRegions[regIter]->fHistoPathSuffs,
-// 				   histoFiles, empty, // no histo file suffs for nominal (syst only)
-// 				   histoNames, empty  // same for histo name
-// 				   );
+//                                    histoFiles, empty, // no histo file suffs for nominal (syst only)
+//                                    histoNames, empty  // same for histo name
+//                                    );
        fullPaths = CreatePathsList( fHistoPaths, CombinePathSufs(fRegions[regIter]->fHistoPathSuffs, fSamples[i_smp]->fHistoPaths),//fRegions[regIter]->fHistoPathSuffs,              
                                    histoFiles, empty, // no histo file suffs for nominal (syst only)                                                                                 
                                    histoNames, empty  // same for histo name                                                                                                         
                                    );
 
       for(int i_path=0;i_path<(int)fullPaths.size();i_path++){
-	htmp = (TH1F*)HistFromFile( fullPaths[i_path] );
-	
-	//Pre-processing of histograms (rebinning, lumi scaling)
-	if(fRegions[regIter]->fHistoBins){
-	  TH1F* htmp2 = (TH1F*)(htmp->Rebin(fRegions[regIter]->fHistoNBinsRebin,"htmp2",fRegions[regIter]->fHistoBins));
-	  const char *hname = htmp->GetName();
-	  htmp->~TH1F();
-	  htmp = htmp2;
-	  htmp->SetName(hname);
-	} else if(fRegions[regIter]->fHistoNBinsRebin != -1) {
-	  htmp = (TH1F*)(htmp->Rebin(fRegions[regIter]->fHistoNBinsRebin));
-	}
+        htmp = (TH1F*)HistFromFile( fullPaths[i_path] );
         
-	if(fSamples[i_smp]->fType!=Sample::DATA && fSamples[i_smp]->fNormalizedByTheory) htmp -> Scale(fLumi);
+        //Pre-processing of histograms (rebinning, lumi scaling)
+        if(fRegions[regIter]->fHistoBins){
+          TH1F* htmp2 = (TH1F*)(htmp->Rebin(fRegions[regIter]->fHistoNBinsRebin,"htmp2",fRegions[regIter]->fHistoBins));
+          const char *hname = htmp->GetName();
+          htmp->~TH1F();
+          htmp = htmp2;
+          htmp->SetName(hname);
+        } else if(fRegions[regIter]->fHistoNBinsRebin != -1) {
+          htmp = (TH1F*)(htmp->Rebin(fRegions[regIter]->fHistoNBinsRebin));
+        }
         
-	if(fSamples[i_smp]->fLumiScales.size()>i_path) htmp -> Scale(fSamples[i_smp]->fLumiScales[i_path]);
-	else if(fSamples[i_smp]->fLumiScales.size()==1) htmp -> Scale(fSamples[i_smp]->fLumiScales[0]);
+        if(fSamples[i_smp]->fType!=Sample::DATA && fSamples[i_smp]->fNormalizedByTheory) htmp -> Scale(fLumi);
         
-	// apply histogram to signal or background
-	if(fSamples[i_smp]->fType==Sample::SIGNAL){
-	  if(nDefSig){
-	    hsig = (TH1F*)htmp->Clone(Form("h_%s_%s",fRegions[regIter]->fName.c_str(),fSamples[i_smp]->fName.c_str()));
-	    nDefSig=false;
-	  }
-	  else hsig->Add(htmp);
-	}
-	else{
-	  if(nDefBkg){
-	    hbkg = (TH1F*)htmp->Clone(Form("h_%s_%s",fRegions[regIter]->fName.c_str(),fSamples[i_smp]->fName.c_str()));
-	    nDefBkg=false;
-	  }
-	  else hbkg->Add(htmp);
-	}
+        if(fSamples[i_smp]->fLumiScales.size()>i_path) htmp -> Scale(fSamples[i_smp]->fLumiScales[i_path]);
+        else if(fSamples[i_smp]->fLumiScales.size()==1) htmp -> Scale(fSamples[i_smp]->fLumiScales[0]);
+        
+        // apply histogram to signal or background
+        if(fSamples[i_smp]->fType==Sample::SIGNAL){
+          if(nDefSig){
+            hsig = (TH1F*)htmp->Clone(Form("h_%s_%s",fRegions[regIter]->fName.c_str(),fSamples[i_smp]->fName.c_str()));
+            nDefSig=false;
+          }
+          else hsig->Add(htmp);
+        }
+        else{
+          if(nDefBkg){
+            hbkg = (TH1F*)htmp->Clone(Form("h_%s_%s",fRegions[regIter]->fName.c_str(),fSamples[i_smp]->fName.c_str()));
+            nDefBkg=false;
+          }
+          else hbkg->Add(htmp);
+        }
 
-	htmp->~TH1F();
+        htmp->~TH1F();
         
       }
     }
@@ -5666,17 +5671,17 @@ void TtHFit::ComputeBining(int regIter){
           pass = sqrt(err2Rel) < 1 && sqrt(err2RelBkg) < 0.10;
       }
       else if(fRegions[regIter]->fBinTransfo == "TransfoJ"){
-	if (!jBreak) pass = (sumBkg >  jGoal);
-	else pass = (sumBkg > jTarget);
-	if( pass && !jBreak ){
-	  if( (sumSig/sumBkg) <  fRegions[regIter]->fTransfoJpar2*(nSig/nBkg) ){
-	    jBreak = true;
-	    jTarget = hbkg->Integral(0,iBin)/ fRegions[regIter]->fTransfoJpar3;
-	  }
-	  else{
-	    jGoal = jGoal+1;
-	  }
-	}
+        if (!jBreak) pass = (sumBkg >  jGoal);
+        else pass = (sumBkg > jTarget);
+        if( pass && !jBreak ){
+          if( (sumSig/sumBkg) <  fRegions[regIter]->fTransfoJpar2*(nSig/nBkg) ){
+            jBreak = true;
+            jTarget = hbkg->Integral(0,iBin)/ fRegions[regIter]->fTransfoJpar3;
+          }
+          else{
+            jGoal = jGoal+1;
+          }
+        }
       }
       else{
         std::cout << "ERROR: transformation method '" << fRegions[regIter]->fBinTransfo << "' unknown, try again!" << std::endl;
@@ -5810,7 +5815,7 @@ void TtHFit::defineVariable(int regIter){
   TH1::StatOverflows(true);  //////  What is the defaut in root for this ???
 
   if(TtHFitter::DEBUGLEVEL>0) std::cout << "//////// --------" << std::endl
-					<< "// DEBUG CORR VAR" << std::endl;
+                                        << "// DEBUG CORR VAR" << std::endl;
 
   TH1* h1 = new TH1D("h1","h1",1,-2000.,1000.);
   TH1* h2 = new TH1D("h2","h2",1,-2000.,1000.);
@@ -5849,19 +5854,19 @@ void TtHFit::defineVariable(int regIter){
       NtupleNames.push_back(fSamples[i_smp]->fNtupleNames.at(ns_smp));
     }
     vector<string> NtupleNameSuffs = CombinePathSufs( fSamples[i_smp]->fNtupleNameSuffs,
-						      fRegions[regIter]->fNtupleNameSuffs );
+                                                      fRegions[regIter]->fNtupleNameSuffs );
     fullPaths = CreatePathsList( fSamples[i_smp]->fNtuplePaths.size()>0 ? fSamples[i_smp]->fNtuplePaths : fNtuplePaths,
-				 fRegions[regIter]->fNtuplePathSuffs,
-				 fSamples[i_smp]->fNtupleFiles.size()>0 ? fSamples[i_smp]->fNtupleFiles : ToVec(fNtupleFile), empty, // no ntuple file suffs for nominal (syst only)
-				 NtupleNames.size()>0 ? NtupleNames : ToVec( fNtupleName ),
-				 NtupleNameSuffs.size()>0 ? NtupleNameSuffs : empty  // NEW
-				 );
+                                 fRegions[regIter]->fNtuplePathSuffs,
+                                 fSamples[i_smp]->fNtupleFiles.size()>0 ? fSamples[i_smp]->fNtupleFiles : ToVec(fNtupleFile), empty, // no ntuple file suffs for nominal (syst only)
+                                 NtupleNames.size()>0 ? NtupleNames : ToVec( fNtupleName ),
+                                 NtupleNameSuffs.size()>0 ? NtupleNameSuffs : empty  // NEW
+                                 );
             
     for(int i_path=0;i_path<(int)fullPaths.size();i_path++){
 
       if(TtHFitter::DEBUGLEVEL>0) std::cout <<" -> Retriving : "<<Form("%s",fRegions[regIter]->fCorrVar1.c_str())
-					    <<" w/ weight "<<Form("(%s)*(%s)",fullMCweight.c_str(),fullSelection.c_str())
-					    <<" from "<< fullPaths[i_path].c_str() << std::endl;
+                                            <<" w/ weight "<<Form("(%s)*(%s)",fullMCweight.c_str(),fullSelection.c_str())
+                                            <<" from "<< fullPaths[i_path].c_str() << std::endl;
 
       TH1* htmp1 = new TH1D("htmp1","htmp1",1,-2000.,1000.);
       TH1* htmp2 = new TH1D("htmp2","htmp2",1,-2000.,1000.);
